# Tauri_study

./: readme.md
erp-crm-client/src-tauri/bundle/msi/: ERP-CRM-client_1.0.0_x64_en-US.msi
erp-crm-client/src-tauri/src/database/: mod.rs
form-designer/: index.html  package-lock.json  package.json  readme.md  vite.config.js
form-designer/src/: App.jsx  index.css
form-designer/src-tauri/: Cargo.toml  tauri.conf.json
form-designer/src-tauri/bundle/msi/: FormDesigner_1.0.0_x64_en-US.msi
form-designer/src-tauri/capabilities/: default.json
form-designer/src-tauri/src/: main.rs
markdown-notes-app/: README.md
pdf-converter/src-tauri/: testContext2.docx  testContext20.docx
task-manager/: DELIVERY_INSTRUCTIONS.md  FILE_CHECKLIST.md  GETTING_STARTED.md  README.md  index.html  package.json  tailwind.config.js  vite.config.js  使用说明.md
task-manager/src/: App.jsx  index.css
task-manager/src-tauri/: Cargo.toml  tauri.conf.json
task-manager/src-tauri/icons/: icon.icns
task-manager/src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
task-manager/src/components/: KanbanBoard.jsx  PriorityBadge.jsx  SearchBar.jsx  TaskCard.jsx  TaskForm.jsx  TaskList.jsx
task-manager/src/hooks/: useTasks.js
task-manager/src/lib/: tauri-api.js
tauri-crm-erp/: 00-START_HERE.md  ARCHITECTURE.md  CODE_INDEX.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  add_utilities.sh  create_remaining_files.sh  generate_rust_files.sh  index.html  package.json  tailwind.config.js  vite.config.js
tauri-crm-erp/database/: schema.sql
tauri-crm-erp/src/: App.jsx
tauri-crm-erp/src-tauri/: Cargo.toml  tauri.conf.json
tauri-crm-erp/src-tauri/src/: main.rs
tauri-crm-erp/src-tauri/src/commands/: auth.rs  customer.rs  mod.rs
tauri-crm-erp/src-tauri/src/database/: connection.rs
tauri-crm-erp/src-tauri/src/models/: common.rs  customer.rs  mod.rs  user.rs
tauri-crm-erp/src-tauri/src/repositories/: customer_repo.rs  mod.rs  user_repo.rs
tauri-crm-erp/src-tauri/src/services/: auth_service.rs  customer_service.rs  mod.rs
tauri-crm-erp/src-tauri/src/utils/: crypto.rs
tauri-crm-erp/src/pages/Analytics/: index.jsx
tauri-crm-erp/src/pages/Customers/: index.jsx
tauri-crm-erp/src/routes/: index.jsx
tauri-crm-erp/src/services/: api.js  authService.js  customerService.js  index.js
tauri-crm-erp/src/store/: authStore.js  index.js  settingsStore.js
tauri-crm-erp/src/styles/: index.css
(+10 files in other folders)
