[package]
name = "tauri-crm-erp"
version = "1.0.0"
description = "企业级 CRM/ERP 跨平台桌面应用"
authors = ["Your Company"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心依赖
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库相关
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# 密码加密
bcrypt = "0.15"

# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# UUID 生成
uuid = { version = "1.7", features = ["v4", "serde"] }

# 正则表达式
regex = "1.10"

# 日志
log = "0.4"
env_logger = "0.11"

# 文件操作
csv = "1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
